--- a/caravan/style.css
+++ b/caravan/style.css
@@ -7,7 +7,7 @@
 
 header, nav, h2, .main-visual, footer {
   font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
-}q
+}
 
 a {
   text-decoration: none;
@@ -28,8 +28,8 @@ header{
 
 .social{
   position: absolute;
-  top: 22px; 
-  right: 22px; 
+  top: 22px;
+  right: 22px;
 }
 
 header h1{
@@ -224,4 +224,81 @@ footer {
 
 .footer-text {
   color: #fff;
+}
+
+
+/*レスポンシブ*/
+@media screen and (max-width:425px){
+
+  
+  header {
+    width: 100%;
+  }
+
+  .nav-list {
+    width: 100%;
+  }
+
+  .nav-list-item {
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+
+  .social {
+    display: none;
+  }
+
+  .main-visual-content {
+    width: 100%;
+  }
+
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .blog {
+    width: 100%;
+    margin: 0;
+  }
+
+  .blog-box {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .blog-image {
+    width: 49%;
+  }
+
+  .blog-text {
+    width: 49%;
+    padding-top: 5px;
+  }
+
+  .sidebar {
+    width: 100%;
+  }
+
+  .sidebar-contents {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+
+  .pagination {
+    margin-bottom: 50px;
+  }
+}
+ 
+
+
 }
